package com.dmm.bootcamp.yatter2025.domain.model

import com.dmm.bootcamp.yatter2025.common.ddd.Identifier

class MediaId(value: String) : Identifier<String>(value)
